tests/baselines/reference/asyncFunctionDeclaration5_es6.errors.txt
//// [tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration5_es6.ts] ////

asyncFunctionDeclaration5_es6.ts(1,20): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.


==== asyncFunctionDeclaration5_es6.ts (1 errors) ====
    async function foo(await): Promise<void> {
                       ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
    }